fix overflow on right side of main, remove Nav2 from Forum

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,15 @@
+/* body {
+   overflow: hidden;
+} */
+.App {
+    overflow-x: hidden;
+}
+
 .jumbotron {
     background-image: url("/images/jumbotronBackground.jpg");
     box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
     height: 500px;
+    
 }
 
 .mainjumbotron {
@@ -44,6 +52,7 @@
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
+    opacity: 0.85;
 }
 .nav-link {
     padding-left: 60px;
